# oldflight

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  b747.c  bitmap.h  c150.c  color.c  colors.h  demo.c  demo.h  draw_logo.c  f15.c  f16.c  f16_defs.h  f16_points.h  f16w.c  f18.c  flight.c  flight.h  flight_structure.h  gamestruct.h  graph.c  graph.h  irisgl.c  irisgl.h  main.c  main.h  maths.c  maths.h  meters.c  meters.h  object.c  objects.h  p38.c  p38.h  p38w.c  planes.h  resource.h  sgilogo.h  (+6 more)
oldflight/: oldflight.sln  oldflight.vcxproj  oldflight.vcxproj.filters  packages.config
